[tool.poetry]
name = "Denbot"
version = "1.0.0"
description = "Multipurpose Discord bot"
authors = ["Dhruv Rajesh <drv.rajesh98@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytz = "^2020.5"
replit = "^2.0.0"
discord = "^1.0.1"
ratelimit = "^2.2.1"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
